openshift/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: test
  labels:
    app: hello-world
spec:
  to:
    kind: Service
    name: test
  port:
    targetPort: 5000
